// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules / Rating Rating 0 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: auto;
}

.c0:not(:empty) {
  gap: 2px;
}

.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c3 {
  color: #EBEBE8;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    0 stars
  </div>
  <div
    className="c2"
  >
    <svg
      aria-hidden="true"
      className="c3"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="presentation"
      width={16}
    >
      <path
        d="M8 .4L10.769 5 16 6.213l-3.52 4.055.464 5.35L8 13.522l-4.944 2.095.464-5.35L0 6.212l5.231-1.211L8 .4z"
        fill="currentColor"
      />
    </svg>
  </div>
  <div
    className="c2"
  >
    <svg
      aria-hidden="true"
      className="c3"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="presentation"
      width={16}
    >
      <path
        d="M8 .4L10.769 5 16 6.213l-3.52 4.055.464 5.35L8 13.522l-4.944 2.095.464-5.35L0 6.212l5.231-1.211L8 .4z"
        fill="currentColor"
      />
    </svg>
  </div>
  <div
    className="c2"
  >
    <svg
      aria-hidden="true"
      className="c3"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="presentation"
      width={16}
    >
      <path
        d="M8 .4L10.769 5 16 6.213l-3.52 4.055.464 5.35L8 13.522l-4.944 2.095.464-5.35L0 6.212l5.231-1.211L8 .4z"
        fill="currentColor"
      />
    </svg>
  </div>
  <div
    className="c2"
  >
    <svg
      aria-hidden="true"
      className="c3"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="presentation"
      width={16}
    >
      <path
        d="M8 .4L10.769 5 16 6.213l-3.52 4.055.464 5.35L8 13.522l-4.944 2.095.464-5.35L0 6.212l5.231-1.211L8 .4z"
        fill="currentColor"
      />
    </svg>
  </div>
  <div
    className="c2"
  >
    <svg
      aria-hidden="true"
      className="c3"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="presentation"
      width={16}
    >
      <path
        d="M8 .4L10.769 5 16 6.213l-3.52 4.055.464 5.35L8 13.522l-4.944 2.095.464-5.35L0 6.212l5.231-1.211L8 .4z"
        fill="currentColor"
      />
    </svg>
  </div>
</div>
`;

exports[`Storyshots Molecules / Rating Rating 1 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: auto;
}

.c0:not(:empty) {
  gap: 2px;
}

.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c3 {
  color: #FFCF00;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c4 {
  color: #EBEBE8;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    1 star
  </div>
  <div
    className="c2"
  >
    <svg
      aria-hidden="true"
      className="c3"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="presentation"
      width={16}
    >
      <path
        d="M8 .4L10.769 5 16 6.213l-3.52 4.055.464 5.35L8 13.522l-4.944 2.095.464-5.35L0 6.212l5.231-1.211L8 .4z"
        fill="currentColor"
      />
    </svg>
  </div>
  <div
    className="c2"
  >
    <svg
      aria-hidden="true"
      className="c4"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="presentation"
      width={16}
    >
      <path
        d="M8 .4L10.769 5 16 6.213l-3.52 4.055.464 5.35L8 13.522l-4.944 2.095.464-5.35L0 6.212l5.231-1.211L8 .4z"
        fill="currentColor"
      />
    </svg>
  </div>
  <div
    className="c2"
  >
    <svg
      aria-hidden="true"
      className="c4"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="presentation"
      width={16}
    >
      <path
        d="M8 .4L10.769 5 16 6.213l-3.52 4.055.464 5.35L8 13.522l-4.944 2.095.464-5.35L0 6.212l5.231-1.211L8 .4z"
        fill="currentColor"
      />
    </svg>
  </div>
  <div
    className="c2"
  >
    <svg
      aria-hidden="true"
      className="c4"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="presentation"
      width={16}
    >
      <path
        d="M8 .4L10.769 5 16 6.213l-3.52 4.055.464 5.35L8 13.522l-4.944 2.095.464-5.35L0 6.212l5.231-1.211L8 .4z"
        fill="currentColor"
      />
    </svg>
  </div>
  <div
    className="c2"
  >
    <svg
      aria-hidden="true"
      className="c4"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="presentation"
      width={16}
    >
      <path
        d="M8 .4L10.769 5 16 6.213l-3.52 4.055.464 5.35L8 13.522l-4.944 2.095.464-5.35L0 6.212l5.231-1.211L8 .4z"
        fill="currentColor"
      />
    </svg>
  </div>
</div>
`;

exports[`Storyshots Molecules / Rating Rating 5 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: auto;
}

.c0:not(:empty) {
  gap: 2px;
}

.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c3 {
  color: #FFCF00;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    5 stars
  </div>
  <div
    className="c2"
  >
    <svg
      aria-hidden="true"
      className="c3"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="presentation"
      width={16}
    >
      <path
        d="M8 .4L10.769 5 16 6.213l-3.52 4.055.464 5.35L8 13.522l-4.944 2.095.464-5.35L0 6.212l5.231-1.211L8 .4z"
        fill="currentColor"
      />
    </svg>
  </div>
  <div
    className="c2"
  >
    <svg
      aria-hidden="true"
      className="c3"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="presentation"
      width={16}
    >
      <path
        d="M8 .4L10.769 5 16 6.213l-3.52 4.055.464 5.35L8 13.522l-4.944 2.095.464-5.35L0 6.212l5.231-1.211L8 .4z"
        fill="currentColor"
      />
    </svg>
  </div>
  <div
    className="c2"
  >
    <svg
      aria-hidden="true"
      className="c3"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="presentation"
      width={16}
    >
      <path
        d="M8 .4L10.769 5 16 6.213l-3.52 4.055.464 5.35L8 13.522l-4.944 2.095.464-5.35L0 6.212l5.231-1.211L8 .4z"
        fill="currentColor"
      />
    </svg>
  </div>
  <div
    className="c2"
  >
    <svg
      aria-hidden="true"
      className="c3"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="presentation"
      width={16}
    >
      <path
        d="M8 .4L10.769 5 16 6.213l-3.52 4.055.464 5.35L8 13.522l-4.944 2.095.464-5.35L0 6.212l5.231-1.211L8 .4z"
        fill="currentColor"
      />
    </svg>
  </div>
  <div
    className="c2"
  >
    <svg
      aria-hidden="true"
      className="c3"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="presentation"
      width={16}
    >
      <path
        d="M8 .4L10.769 5 16 6.213l-3.52 4.055.464 5.35L8 13.522l-4.944 2.095.464-5.35L0 6.212l5.231-1.211L8 .4z"
        fill="currentColor"
      />
    </svg>
  </div>
</div>
`;

exports[`Storyshots Molecules / Rating Rating Not Defined 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: auto;
}

.c0:not(:empty) {
  gap: 2px;
}

.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c3 {
  color: #EBEBE8;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    0 stars
  </div>
  <div
    className="c2"
  >
    <svg
      aria-hidden="true"
      className="c3"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="presentation"
      width={16}
    >
      <path
        d="M8 .4L10.769 5 16 6.213l-3.52 4.055.464 5.35L8 13.522l-4.944 2.095.464-5.35L0 6.212l5.231-1.211L8 .4z"
        fill="currentColor"
      />
    </svg>
  </div>
  <div
    className="c2"
  >
    <svg
      aria-hidden="true"
      className="c3"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="presentation"
      width={16}
    >
      <path
        d="M8 .4L10.769 5 16 6.213l-3.52 4.055.464 5.35L8 13.522l-4.944 2.095.464-5.35L0 6.212l5.231-1.211L8 .4z"
        fill="currentColor"
      />
    </svg>
  </div>
  <div
    className="c2"
  >
    <svg
      aria-hidden="true"
      className="c3"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="presentation"
      width={16}
    >
      <path
        d="M8 .4L10.769 5 16 6.213l-3.52 4.055.464 5.35L8 13.522l-4.944 2.095.464-5.35L0 6.212l5.231-1.211L8 .4z"
        fill="currentColor"
      />
    </svg>
  </div>
  <div
    className="c2"
  >
    <svg
      aria-hidden="true"
      className="c3"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="presentation"
      width={16}
    >
      <path
        d="M8 .4L10.769 5 16 6.213l-3.52 4.055.464 5.35L8 13.522l-4.944 2.095.464-5.35L0 6.212l5.231-1.211L8 .4z"
        fill="currentColor"
      />
    </svg>
  </div>
  <div
    className="c2"
  >
    <svg
      aria-hidden="true"
      className="c3"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="presentation"
      width={16}
    >
      <path
        d="M8 .4L10.769 5 16 6.213l-3.52 4.055.464 5.35L8 13.522l-4.944 2.095.464-5.35L0 6.212l5.231-1.211L8 .4z"
        fill="currentColor"
      />
    </svg>
  </div>
</div>
`;

exports[`Storyshots Molecules / Rating Rating Out Of 3 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: auto;
}

.c0:not(:empty) {
  gap: 2px;
}

.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c3 {
  color: #336BFF;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c4 {
  color: #BDBDBD;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    2 stars
  </div>
  <div
    className="c2"
  >
    <svg
      aria-hidden="true"
      className="c3"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="presentation"
      width={16}
    >
      <path
        d="M8 .4L10.769 5 16 6.213l-3.52 4.055.464 5.35L8 13.522l-4.944 2.095.464-5.35L0 6.212l5.231-1.211L8 .4z"
        fill="currentColor"
      />
    </svg>
  </div>
  <div
    className="c2"
  >
    <svg
      aria-hidden="true"
      className="c3"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="presentation"
      width={16}
    >
      <path
        d="M8 .4L10.769 5 16 6.213l-3.52 4.055.464 5.35L8 13.522l-4.944 2.095.464-5.35L0 6.212l5.231-1.211L8 .4z"
        fill="currentColor"
      />
    </svg>
  </div>
  <div
    className="c2"
  >
    <svg
      aria-hidden="true"
      className="c4"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="presentation"
      width={16}
    >
      <path
        d="M8 .4L10.769 5 16 6.213l-3.52 4.055.464 5.35L8 13.522l-4.944 2.095.464-5.35L0 6.212l5.231-1.211L8 .4z"
        fill="currentColor"
      />
    </svg>
  </div>
</div>
`;

exports[`Storyshots Molecules / Rating Rating Out Of 3 With Label 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 100vh;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -8px;
  margin-right: -8px;
}

.c0 > * {
  padding-left: 8px;
  padding-right: 8px;
}

.c0 > *:not(:first-child) {
  padding-top: 0;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 20px;
}

.c4:not(:empty) {
  gap: 2px;
}

.c6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c7 {
  color: #336BFF;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c8 {
  color: #BDBDBD;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 1.3333333333333333;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <span
      className="Typography__Span-sc-10mju41-0 c2"
    >
      12345
    </span>
    <span
      className="Typography__Span-sc-10mju41-0 c3"
    >
      label
    </span>
  </div>
  <div
    className="c1"
  >
    <div
      className="c4"
    >
      <div
        className="c5"
      >
        2 stars
      </div>
      <div
        className="c6"
      >
        <svg
          aria-hidden="true"
          className="c7"
          focusable="false"
          height={16}
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          width={16}
        >
          <path
            d="M8 .4L10.769 5 16 6.213l-3.52 4.055.464 5.35L8 13.522l-4.944 2.095.464-5.35L0 6.212l5.231-1.211L8 .4z"
            fill="currentColor"
          />
        </svg>
      </div>
      <div
        className="c6"
      >
        <svg
          aria-hidden="true"
          className="c7"
          focusable="false"
          height={16}
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          width={16}
        >
          <path
            d="M8 .4L10.769 5 16 6.213l-3.52 4.055.464 5.35L8 13.522l-4.944 2.095.464-5.35L0 6.212l5.231-1.211L8 .4z"
            fill="currentColor"
          />
        </svg>
      </div>
      <div
        className="c6"
      >
        <svg
          aria-hidden="true"
          className="c8"
          focusable="false"
          height={16}
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          width={16}
        >
          <path
            d="M8 .4L10.769 5 16 6.213l-3.52 4.055.464 5.35L8 13.522l-4.944 2.095.464-5.35L0 6.212l5.231-1.211L8 .4z"
            fill="currentColor"
          />
        </svg>
      </div>
    </div>
    <span
      className="Typography__Span-sc-10mju41-0 c3"
    >
      this rating has a custom height
    </span>
  </div>
</div>
`;

exports[`Storyshots Molecules / Rating Rating With Size 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: auto;
}

.c0:not(:empty) {
  gap: 2px;
}

.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c3 {
  color: #FFCF00;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c4 {
  color: #EBEBE8;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    3 stars
  </div>
  <div
    className="c2"
  >
    <svg
      aria-hidden="true"
      className="c3"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="presentation"
      width={16}
    >
      <path
        d="M8 .4L10.769 5 16 6.213l-3.52 4.055.464 5.35L8 13.522l-4.944 2.095.464-5.35L0 6.212l5.231-1.211L8 .4z"
        fill="currentColor"
      />
    </svg>
  </div>
  <div
    className="c2"
  >
    <svg
      aria-hidden="true"
      className="c3"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="presentation"
      width={16}
    >
      <path
        d="M8 .4L10.769 5 16 6.213l-3.52 4.055.464 5.35L8 13.522l-4.944 2.095.464-5.35L0 6.212l5.231-1.211L8 .4z"
        fill="currentColor"
      />
    </svg>
  </div>
  <div
    className="c2"
  >
    <svg
      aria-hidden="true"
      className="c3"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="presentation"
      width={16}
    >
      <path
        d="M8 .4L10.769 5 16 6.213l-3.52 4.055.464 5.35L8 13.522l-4.944 2.095.464-5.35L0 6.212l5.231-1.211L8 .4z"
        fill="currentColor"
      />
    </svg>
  </div>
  <div
    className="c2"
  >
    <svg
      aria-hidden="true"
      className="c4"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="presentation"
      width={16}
    >
      <path
        d="M8 .4L10.769 5 16 6.213l-3.52 4.055.464 5.35L8 13.522l-4.944 2.095.464-5.35L0 6.212l5.231-1.211L8 .4z"
        fill="currentColor"
      />
    </svg>
  </div>
  <div
    className="c2"
  >
    <svg
      aria-hidden="true"
      className="c4"
      focusable="false"
      height={16}
      preserveAspectRatio="xMidYMid meet"
      role="presentation"
      width={16}
    >
      <path
        d="M8 .4L10.769 5 16 6.213l-3.52 4.055.464 5.35L8 13.522l-4.944 2.095.464-5.35L0 6.212l5.231-1.211L8 .4z"
        fill="currentColor"
      />
    </svg>
  </div>
</div>
`;

exports[`Storyshots Molecules / Rating Rating With String Size 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: auto;
}

.c0:not(:empty) {
  gap: 2px;
}

.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c3 {
  color: #FFCF00;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c4 {
  color: #EBEBE8;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    3 stars
  </div>
  <div
    className="c2"
  >
    <svg
      aria-hidden="true"
      className="c3"
      focusable="false"
      height={32}
      preserveAspectRatio="xMidYMid meet"
      role="presentation"
      width={32}
    >
      <path
        d="M16 2l5.076 8.466 9.59 2.229-6.453 7.462.851 9.843L16 26.146 6.935 30l.851-9.843-6.453-7.462 9.59-2.23L16 2z"
        fill="currentColor"
      />
    </svg>
  </div>
  <div
    className="c2"
  >
    <svg
      aria-hidden="true"
      className="c3"
      focusable="false"
      height={32}
      preserveAspectRatio="xMidYMid meet"
      role="presentation"
      width={32}
    >
      <path
        d="M16 2l5.076 8.466 9.59 2.229-6.453 7.462.851 9.843L16 26.146 6.935 30l.851-9.843-6.453-7.462 9.59-2.23L16 2z"
        fill="currentColor"
      />
    </svg>
  </div>
  <div
    className="c2"
  >
    <svg
      aria-hidden="true"
      className="c3"
      focusable="false"
      height={32}
      preserveAspectRatio="xMidYMid meet"
      role="presentation"
      width={32}
    >
      <path
        d="M16 2l5.076 8.466 9.59 2.229-6.453 7.462.851 9.843L16 26.146 6.935 30l.851-9.843-6.453-7.462 9.59-2.23L16 2z"
        fill="currentColor"
      />
    </svg>
  </div>
  <div
    className="c2"
  >
    <svg
      aria-hidden="true"
      className="c4"
      focusable="false"
      height={32}
      preserveAspectRatio="xMidYMid meet"
      role="presentation"
      width={32}
    >
      <path
        d="M16 2l5.076 8.466 9.59 2.229-6.453 7.462.851 9.843L16 26.146 6.935 30l.851-9.843-6.453-7.462 9.59-2.23L16 2z"
        fill="currentColor"
      />
    </svg>
  </div>
  <div
    className="c2"
  >
    <svg
      aria-hidden="true"
      className="c4"
      focusable="false"
      height={32}
      preserveAspectRatio="xMidYMid meet"
      role="presentation"
      width={32}
    >
      <path
        d="M16 2l5.076 8.466 9.59 2.229-6.453 7.462.851 9.843L16 26.146 6.935 30l.851-9.843-6.453-7.462 9.59-2.23L16 2z"
        fill="currentColor"
      />
    </svg>
  </div>
</div>
`;
